--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
     <div class="quiz-container">
         <h1>History Quiz</h1>
+         <h3> All First letters when typing your answers should be capital.</h3>
         <div id="question-container">
             <p id="question-text"></p>
             <input type="text" id="answer-input" placeholder="Type your answer here">
