--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <a href="#">Agric Sci</a>
             <a href="#">English Language</a>
         </nav>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Flag_of_Zambia.svg" alt="Eagle" class="eagle">
+        <img src="https://www.bing.com/ck/a?!&&p=04a732142de77ecbJmltdHM9MTcyNjc5MDQwMCZpZ3VpZD0wMDc4ZWQxYy01ODhlLTY1YzItMzUxMS1mZWIxNTlhZDY0ZDMmaW5zaWQ9NjU1OA&ptn=3&ver=2&hsh=3&fclid=0078ed1c-588e-65c2-3511-feb159ad64d3&psq=eagle&u=a1aHR0cHM6Ly9lbi53aWtpcGVkaWEub3JnL3dpa2kvRWFnbGUjRGlzdHJpYnV0aW9u&ntb=1" alt="Eagle" class="eagle">
     </div>
 
     <div class="quiz-container">
