--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <div class="header">
         <nav>
-            <a href="#">Computer Studies</a>
+            <a href="computer_studies.html">Computer Studies</a>
             <a href="#">Religious Education</a>
             <a href="#">Business Studies</a>
             <a href="#">Agric Sci</a>
