--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
             <button onclick="restartQuiz()">Restart Quiz</button>
         </div>
     </div>
+    <a href="https://wa.me/0987319400" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp" style="width: 50px; height: 50px;">
+    </a>
 
     <div class="footer">
         <p>Developed By Engr. Busiku Kapikanya | <a href="https://wa.me/260978319400" target="_blank">0978319400</a> | Luwingu</p>
