--- a/index.html
+++ b/index.html
@@ -97,15 +97,20 @@
 
     <div class="header">
         <nav>
-            <a href="computer_studies.html">Computer Studies</a>
+            <a href="https://busiku.github.io/katubaconstituency/computer_studies_quiz.html">Computer Studies</a>
             <a href="#">Religious Education</a>
             <a href="#">Business Studies</a>
             <a href="#">Agric Sci</a>
             <a href="#">English Language</a>
         </nav>
-        <img src="https://www.bing.com/ck/a?!&&p=04a732142de77ecbJmltdHM9MTcyNjc5MDQwMCZpZ3VpZD0wMDc4ZWQxYy01ODhlLTY1YzItMzUxMS1mZWIxNTlhZDY0ZDMmaW5zaWQ9NjU1OA&ptn=3&ver=2&hsh=3&fclid=0078ed1c-588e-65c2-3511-feb159ad64d3&psq=eagle&u=a1aHR0cHM6Ly9lbi53aWtpcGVkaWEub3JnL3dpa2kvRWFnbGUjRGlzdHJpYnV0aW9u&ntb=1" alt="Eagle" class="eagle">
+        <img src="https://drive.google.com/file/d/1i2wA9aQfe1LalgNi-gPsR9wlqzEr1eGZ/view?usp=sharing" alt="Eagle" class="eagle">
     </div>
-
+<marquee class="marquee" behavior="scroll" direction="left" scrollamount="5">
+        <span class="red">60</span> 
+        <span class="green">Years of Celebrating</span> 
+        <span class="black">One Zambia</span> 
+        <span class="orange">One Nation </span>
+    </marquee>
     <div class="quiz-container">
         <h1>History Quiz</h1>
          <h3> All First letters when typing your answers should be capital.</h3>
@@ -121,10 +126,22 @@
             <button onclick="restartQuiz()">Restart Quiz</button>
         </div>
     </div>
-    <a href="https://wa.me/0987319400" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp" style="width: 50px; height: 50px;">
-    </a>
 
+    <!-- WhatsApp Button Floater HTML -->
+   
+ <div class="whatsapp-floater" id="whatsapp-floater">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+    </div>
+
+ <!-- Existing scripts -->
+    
+ <!-- WhatsApp Button Floater Script -->
+    <script>
+        document.getElementById('whatsapp-floater').addEventListener('click', function() {
+            window.open('https://wa.me/260978319400', '_Welcome to Digital Empire Technologies');
+        });
+    </script>
+    
     <div class="footer">
         <p>Developed By Engr. Busiku Kapikanya | <a href="https://wa.me/260978319400" target="_blank">0978319400</a> | Luwingu</p>
     </div>
