--- a/index.html
+++ b/index.html
@@ -91,19 +91,97 @@
             text-decoration: none;
         }
 
+          /* Style for the header and the nav */
+        .header {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        .header nav {
+            float: left;
+        }
+
+        .header nav a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .header nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        /* Dropdown container */
+        .dropdown {
+            float: left;
+            overflow: hidden;
+        }
+
+        .dropdown .dropbtn {
+            font-size: 16px;
+            border: none;
+            outline: none;
+            color: white;
+            padding: 14px 16px;
+            background-color: inherit;
+            font-family: inherit;
+            margin: 0;
+        }
+
+        .header a:hover, .dropdown:hover .dropbtn {
+            background-color: #ddd;
+            color: black;
+        }
+
+        /* Dropdown content (hidden by default) */
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        /* Links inside the dropdown */
+        .dropdown-content a {
+            float: none;
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #ddd;
+        }
+
+        /* Show the dropdown menu on hover */
+        .dropdown:hover .dropdown-content {
+            display: block;
+
     </style>
 </head>
 <body>
 
-    <div class="header">
+   <div class="header">
         <nav>
             <a href="https://busiku.github.io/katubaconstituency/computer_studies_quiz.html">Computer Studies</a>
-            <a href="#">Religious Education</a>
-            <a href="#">Business Studies</a>
-            <a href="#">Agric Sci</a>
-            <a href="#">English Language</a>
+            <div class="dropdown">
+                <button class="dropbtn">Other Subjects</button>
+                <div class="dropdown-content">
+                    <a href="#">Religious Education</a>
+                    <a href="#">Business Studies</a>
+                    <a href="#">Agric Sci</a>
+                    <a href="#">English Language</a>
+                </div>
+            </div>
         </nav>
-        <img src="https://drive.google.com/file/d/1i2wA9aQfe1LalgNi-gPsR9wlqzEr1eGZ/view?usp=sharing" alt="Eagle" class="eagle">
     </div>
 <marquee class="marquee" behavior="scroll" direction="left" scrollamount="5">
         <span class="red">60</span> 
